<resources>
    <string name="app_name">BookingApp</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_empty">Cant Left Blank!</string>
    <string name="err_msg_city">Enter city name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_number">Enter the valid Number</string>
    <string name="err_wrong_pass">You have entered wrong old password!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="facebook_app_id">770270483104747</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mismatch_password">Passwords did not match</string>
    <string name="alert">ALERT</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="unable_find_facebook">"Unable to get your mail id due to facebook policy! Kindly sign up manually!"</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
