<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/edtxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/user_name"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/enter_name"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/edtxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/message"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/edtxtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/padlock"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inpcnfpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/cnfedtxtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/padlock"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:background="@drawable/normal_bg"
            android:gravity="center"
            android:onClick="signup"
            android:text="@string/sign_up"
            android:textSize="@dimen/fifteen_dp" />
    </LinearLayout>
</RelativeLayout>