<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/eighty_dp"
            android:layout_height="@dimen/eighty_dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:src="@mipmap/app_icon"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/message"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:nextFocusUp="@+id/edtpassword"
                android:nextFocusLeft="@+id/edtpassword"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:textColorHint="#D1C4E9">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/padlock"
                android:drawablePadding="@dimen/fifteen_dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp"
                android:textColor="#D1C4E9"
                android:textColorHint="#D1C4E9"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/background_light" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:background="@drawable/bkg"
            android:gravity="center"
            android:text="@string/log_in"
            android:textSize="@dimen/fifteen_dp" />


    </LinearLayout>


</RelativeLayout>